app engine datastore example

--- a/037_JSON/19_solution/index.html
+++ b/037_JSON/19_solution/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 
-<h1>301</h1>
+<h1>301 Moved Permanently</h1>
 <p>Client request:</p>
 <pre>
 GET /index.php HTTP/1.1
@@ -56,7 +56,7 @@ Location: http://www.example.org/index.asp
 <p>The HTTP response status code 301 Moved Permanently is used for permanent URL redirection, meaning current links or records using the URL that the response is received for should be updated. The new URL should be provided in the Location field included with the response. The 301 redirect is considered a best practice for upgrading users from HTTP to HTTPS. RFC 2616 states that: If the 301 status code is received in response to a request of any type other than GET or HEAD, the client must ask the user before redirecting.</p>
 
 
-<h1>302</h1>
+<h1>302 Found</h1>
 <p>Client request:</p>
 <pre>
 GET /index.html HTTP/1.1
@@ -72,7 +72,7 @@ Location: http://www.iana.org/domains/example/
 <p class="discord">Many web browsers implemented this code in a manner that violated this standard, changing the request type of the new request to GET, regardless of the type employed in the original request (e.g. POST). For this reason, HTTP/1.1 (RFC 2616) added the new status codes 303 and 307 to disambiguate between the two behaviours, with 303 mandating the change of request type to GET, and 307 preserving the request type as originally sent. Despite the greater clarity provided by this disambiguation, the 302 code is still employed in web frameworks to preserve compatibility with browsers that do not implement the HTTP/1.1 specification.</p>
 <p class="discord">The update of RFC 2616 changes the definition to allow user agents to rewrite POST to GET.</p>
 
-<h1>303</h1>
+<h1>303 See Other</h1>
 <p>Client request:</p>
 <pre>
 POST / HTTP/1.1
@@ -90,7 +90,7 @@ Location: http://example.org/other
 
 <p>This status code should be used with the location header, as described below. If a server responds to a POST or other non-idempotent request with a 303 See Other response and a value for the location header, the client is expected to obtain the resource mentioned in the location header <strong>using the GET method</strong>; to trigger a request to the target resource using the same method, the server is expected to provide a 307 Temporary Redirect response.</p>
 
-<h1>307</h1>
+<h1>307 Temporary Redirect</h1>
 <p>Client request:</p>
 <pre>
 POST / HTTP/1.1
@@ -98,12 +98,12 @@ Host: www.example.com
 </pre>
 <p>Server response:</p>
 <pre>
-HTTP/1.1 303 See Other
+HTTP/1.1 307 Temporary Redirect
 Location: http://example.org/other
 </pre>
 <p>This is the <strong>same as 302</strong> except it tells the browser that the next request should be made with the <strong>same verb as the original</strong>, in this case POST. In other words, even a POST to the original link, should redirected by a POST to the new link.</p>
 
-<h1>418</h1>
+<h1>418 Teapot</h1>
 <p>This code was defined in 1998 as one of the traditional IETF April Fools' jokes, in RFC 2324, Hyper Text Coffee Pot Control Protocol, and is not expected to be implemented by actual HTTP servers. The RFC specifies this code should be returned by tea pots requested to brew coffee. This HTTP status is used as an easter egg in some websites, including <a href="http://www.google.com/teapot">http://www.google.com/teapot</a></p>
 
 
