--- a/54_AJAX/01/index.html
+++ b/54_AJAX/01/index.html
@@ -15,6 +15,7 @@
         makeRequest('test.html');
     };
 
+    // STEP ONE - create a new XMLHttpRequest
     var httpRequest = new XMLHttpRequest();
 
     function makeRequest(url) {
