working gcs photo blog

--- a/052_photo-blog_cookie_memcache_datastore_url_gcs/02_solution/index.html
+++ b/052_photo-blog_cookie_memcache_datastore_url_gcs/02_solution/index.html
@@ -27,14 +27,11 @@
         {{.ID}}
     </p>
 
-    <p>Bucket:
-        <br>
-        {{.Bucket}}
-    </p>
-
     <p>Pictures:
         <br>
-        {{.Pictures}}
+        {{range .Pictures}}
+        {{.}}
+        {{end}}
     </p>
 
 </body>
