--- a/053_javascript/03_summer-bootcamp/02/01_build-anchor-elements/01.html
+++ b/053_javascript/03_summer-bootcamp/02/01_build-anchor-elements/01.html
@@ -6,6 +6,16 @@
 </head>
 <body>
 
+<h1>Open Your Console</h1>
+
+<ol>
+    <li>Make sure you're using google chrome</li>
+    <li>Right click your webpage</li>
+    <li>Select "inspect"</li>
+    <li>Click the "console" tab</li>
+    <li>Refresh your webpage</li>
+</ol>
+
 <ul>
     <li><a href="www.google.com">google</a></li>
     <li><a href="www.reddit.com">reddit</a></li>
