--- a/053_javascript/03_summer-bootcamp/02/07_log_dir_dom/07.html
+++ b/053_javascript/03_summer-bootcamp/02/07_log_dir_dom/07.html
@@ -16,6 +16,7 @@
     myNode.style["font-family"] = "Helvetica";
     myNode.style.fontSize = '3em';
 
+    console.log(myNode);
     console.dir(myNode);
 </script>
 
