--- a/053_javascript/03_summer-bootcamp/02/10_appendChild/10.html
+++ b/053_javascript/03_summer-bootcamp/02/10_appendChild/10.html
@@ -9,26 +9,16 @@
 <script>
     var myNode = document.querySelector('.item');
     var images = [
-        'http://lorempixel.com/output/sports-q-c-1920-1080-1.jpg',
-        'http://lorempixel.com/output/sports-q-c-1920-1080-2.jpg',
-        'http://lorempixel.com/output/sports-q-c-1920-1080-3.jpg',
-        'http://lorempixel.com/output/sports-q-c-1920-1080-4.jpg',
-        'http://lorempixel.com/output/sports-q-c-1920-1080-5.jpg',
-        'http://lorempixel.com/output/sports-q-c-1920-1080-6.jpg',
-        'http://lorempixel.com/output/sports-q-c-1920-1080-7.jpg',
-        'http://lorempixel.com/output/sports-q-c-1920-1080-8.jpg',
-        'http://lorempixel.com/output/sports-q-c-1920-1080-9.jpg',
-        'http://lorempixel.com/output/sports-q-c-1920-1080-10.jpg',
-//        'http://lorempixel.com/output/sports-q-c-1920-1080-11.jpg',
-//        'http://lorempixel.com/output/sports-q-c-1920-1080-12.jpg',
-//        'http://lorempixel.com/output/sports-q-c-1920-1080-13.jpg',
-//        'http://lorempixel.com/output/sports-q-c-1920-1080-14.jpg',
-//        'http://lorempixel.com/output/sports-q-c-1920-1080-15.jpg',
-//        'http://lorempixel.com/output/sports-q-c-1920-1080-16.jpg',
-//        'http://lorempixel.com/output/sports-q-c-1920-1080-17.jpg',
-//        'http://lorempixel.com/output/sports-q-c-1920-1080-18.jpg',
-//        'http://lorempixel.com/output/sports-q-c-1920-1080-19.jpg',
-//        'http://lorempixel.com/output/sports-q-c-1920-1080-20.jpg',
+        'https://www.fillmurray.com/1920/1080',
+        'https://www.fillmurray.com/1920/1080',
+        'https://www.fillmurray.com/1920/1080',
+        'https://www.fillmurray.com/1920/1080',
+        'https://www.fillmurray.com/1920/1080',
+        'https://www.fillmurray.com/1920/1080',
+        'https://www.fillmurray.com/1920/1080',
+        'https://www.fillmurray.com/1920/1080',
+        'https://www.fillmurray.com/1920/1080',
+        'https://www.fillmurray.com/1920/1080'
     ];
 
     var sayings = [
@@ -71,7 +61,7 @@
         justSaying.style.right = (i * 12) + 'px';
         justSaying.style.fontSize = '14em';
 //        justSaying.style.color = 'rgba(' + (12.5*i) + ',' + (12.5*i) + ',' + (12.5*i) + ',' + (.5*i) + ')';
-        justSaying.style.color = 'white';
+        justSaying.style.color = 'red';
         justSaying.style.opacity = '.75';
         myDiv.appendChild(justSaying);
     }
