--- a/053_javascript/03_summer-bootcamp/03/03_eight-ball/03.html
+++ b/053_javascript/03_summer-bootcamp/03/03_eight-ball/03.html
@@ -70,7 +70,7 @@
         #main-image {
             width: 675px;
             height: 675px;
-            background-image: url('http://planetoftheweb.com/i/8ball/empty.png');
+            background-image: url('img/empty.png');
             background-size: contain;
             transition: 2s;
         }
@@ -80,7 +80,7 @@
 <body>
 
 <main>
-    <!--<img src="http://planetoftheweb.com/i/8ball/empty.png" alt="eight ball" width="675" height="675">-->
+    <!--<img src="http ://planetoftheweb.com/i/8ball/empty.png" alt="eight ball" width="675" height="675">-->
     <div id="main-image"></div>
 </main>
 
@@ -93,30 +93,32 @@
 </section>
 
 <script>
+// image source:
+// 'http: //planetoftheweb.com/i/8ball/19.png',
 
-    var images = [];
+var images = [];
     if (images.length === 0) {
         images = [
-            'http://planetoftheweb.com/i/8ball/19.png',
-            'http://planetoftheweb.com/i/8ball/18.png',
-            'http://planetoftheweb.com/i/8ball/17.png',
-            'http://planetoftheweb.com/i/8ball/16.png',
-            'http://planetoftheweb.com/i/8ball/15.png',
-            'http://planetoftheweb.com/i/8ball/14.png',
-            'http://planetoftheweb.com/i/8ball/13.png',
-            'http://planetoftheweb.com/i/8ball/12.png',
-            'http://planetoftheweb.com/i/8ball/11.png',
-            'http://planetoftheweb.com/i/8ball/10.png',
-            'http://planetoftheweb.com/i/8ball/9.png',
-            'http://planetoftheweb.com/i/8ball/8.png',
-            'http://planetoftheweb.com/i/8ball/7.png',
-            'http://planetoftheweb.com/i/8ball/6.png',
-            'http://planetoftheweb.com/i/8ball/5.png',
-            'http://planetoftheweb.com/i/8ball/4.png',
-            'http://planetoftheweb.com/i/8ball/3.png',
-            'http://planetoftheweb.com/i/8ball/2.png',
-            'http://planetoftheweb.com/i/8ball/1.png',
-            'http://planetoftheweb.com/i/8ball/0.png'
+            'img/19.png',
+            'img/18.png',
+            'img/17.png',
+            'img/16.png',
+            'img/15.png',
+            'img/14.png',
+            'img/13.png',
+            'img/12.png',
+            'img/11.png',
+            'img/10.png',
+            'img/9.png',
+            'img/8.png',
+            'img/7.png',
+            'img/6.png',
+            'img/5.png',
+            'img/4.png',
+            'img/3.png',
+            'img/2.png',
+            'img/1.png',
+            'img/0.png'
         ]
     }
 
