--- a/053_javascript/03_summer-bootcamp/02/05_hasOwnProperty/05.html
+++ b/053_javascript/03_summer-bootcamp/02/05_hasOwnProperty/05.html
@@ -20,6 +20,7 @@
 
     for (var i in info.links) {
         if (info.links.hasOwnProperty(i)) {
+            console.log('INFO.LINKS i - ' + i);
             console.log("Index: " + i + " Value: " + info.links[i] + "\n");
         }
     }
