--- a/053_javascript/03_summer-bootcamp/04/04_lost-tv-show-timer_show/index.html
+++ b/053_javascript/03_summer-bootcamp/04/04_lost-tv-show-timer_show/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="03_zombie_timer.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <main>
@@ -35,7 +35,7 @@
         myMain.removeChild(myButton);
         myMain.removeChild(myHeading);
         myMain.removeChild(myHeadingTwo);
-        myMain.style.background = "url('03/free.jpg') no-repeat center center";
+        myMain.style.background = "url('free.jpg') no-repeat center center";
         setTimeout(termsConditions, 2000);
     }
 
