--- a/053_javascript/03_js-curriculum/05/07_functions_show/index.html
+++ b/053_javascript/03_js-curriculum/05/07_functions_show/index.html
@@ -14,6 +14,8 @@
     callMe();
 
     // self-executing function
+    // IIFE (Immediately Invoked Function Expression)
+    // a JavaScript function that runs as soon as it is defined
     (function bootStrapper() {
         console.log('I executed on my own');
     })();
