--- a/053_javascript/03_js-curriculum/05/14_chaining/index.html
+++ b/053_javascript/03_js-curriculum/05/14_chaining/index.html
@@ -11,26 +11,22 @@
         var DEFAULTS = {
             say: 'hello',
             action: 'jump'
-        }, counter = 0;
-
+        };
         return {
             speak: function () {
                 var myArguments = arguments[0] || '';
                 var statement = myArguments.say || DEFAULTS.say;
-                counter++;
-                console.log(statement + '-' + counter);
+                console.log(statement);
                 return this;
             },
             action: function () {
                 var myArguments = arguments[0] || '';
                 var statement = myArguments.say || DEFAULTS.action;
-                counter++;
-                console.log(statement + '-' + counter);
+                console.log(statement);
                 return this;
-            },
+            }
         };
     })();
-
     ray.speak().action();
 
 </script>
