--- a/053_javascript/03_js-curriculum/05/15_chaining/index.html
+++ b/053_javascript/03_js-curriculum/05/15_chaining/index.html
@@ -7,27 +7,31 @@
 <body>
 <script>
 
-    var ray = (function () {
+    var cowboy = (function () {
         var DEFAULTS = {
             say: 'hello',
             action: 'jump'
-        };
+        }, counter = 0;
+
         return {
             speak: function () {
                 var myArguments = arguments[0] || '';
                 var statement = myArguments.say || DEFAULTS.say;
-                console.log(statement);
+                counter++;
+                console.log(statement + '-' + counter);
                 return this;
             },
             action: function () {
                 var myArguments = arguments[0] || '';
                 var statement = myArguments.say || DEFAULTS.action;
-                console.log(statement);
+                counter++;
+                console.log(statement + '-' + counter);
                 return this;
-            },
+            }
         };
     })();
-    ray.speak().action();
+
+    cowboy.speak().action();
 
 </script>
 </body>
