--- a/053_javascript/03_js-curriculum/07/01_dog-years_show/index.html
+++ b/053_javascript/03_js-curriculum/07/01_dog-years_show/index.html
@@ -31,7 +31,7 @@
 
     div {
         font-size: 12em;
-        color: #f5f5f5;
+        color: #d5d5d5;
         margin: 0;
         padding: 0;
         border: 0;
@@ -57,13 +57,13 @@
     footer {
         margin: 18px;
         font-size: 12em;
-        color: #f5f5f5;
+        color: #d5d5d5;
     }
 
 </style>
 <body>
 <div id='result'>enter age</div>
-<input type='text' name='number'>
+<input type='text' name='number' autofocus>
 <button>convert</button>
 
 <script>
