--- a/053_javascript/03_js-curriculum/06/04_change-background-img_show/index.html
+++ b/053_javascript/03_js-curriculum/06/04_change-background-img_show/index.html
@@ -26,7 +26,7 @@
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            transition: background-image 1s;
+            transition: background-image 1s ease;
         }
 
         #images {
