--- a/054_ajax/01/index.html
+++ b/054_ajax/01/index.html
@@ -41,6 +41,24 @@
         }
     }
 
+
+
+    // or this way:
+    //    function receiveResponse() {
+    //        if (xhr.readyState === 4 && xhr.status === 200) {
+    //            alert(xhr.responseText);
+    //        }
+    //    }
+
+
+
+    // or this way:
+    //    function receiveResponse() {
+    //        if (xhr.readyState === 4) {
+    //            alert(xhr.responseText);
+    //        }
+    //    }
+
 </script>
 </body>
 </html>
