--- a/053_javascript/03_js-curriculum/02/08_querySelector_show/index.html
+++ b/053_javascript/03_js-curriculum/02/08_querySelector_show/index.html
@@ -44,7 +44,7 @@
         paragraph += items[i] + ' ';
         paragraph += '<br>'
     }
-    paragraph += '<p>-------------</p>'
+    paragraph += '<p>-------------</p>';
     for (var i in things) {
         if (things.hasOwnProperty(i)) {
             if(i !== 'dessert') {
@@ -59,7 +59,7 @@
             }
         }
     }
-    paragraph += '<p>-------------</p>'
+    paragraph += '<p>-------------</p>';
     for(var i in otras){
         for(var j in otras[i]){
             paragraph += j + ' ' + otras[i][j];
