--- a/053_javascript/03_js-curriculum/03/07_change-background_show/index.html
+++ b/053_javascript/03_js-curriculum/03/07_change-background_show/index.html
@@ -54,6 +54,18 @@
         console.log('--------------------------------');
     }
 
+//
+//    function preload() {
+//        for (i = 0; i < backgrounds.length; i++) {
+//            			images[i] = new Image();
+//            			images[i].src = backgrounds[i];
+//            		}
+//        	}
+//    	preload();
+
+//    https://github.com/Oralordos/Oralordos.github.io/blob/0b569f1157db7f54c88806b6ce7bfc5d6e336db9/SummerWebBootcamp/Week2/changingBackground/changingBackground.js
+
+//    https://github.com/Oralordos/Oralordos.github.io/blob/0b569f1157db7f54c88806b6ce7bfc5d6e336db9/SummerWebBootcamp/Week2/magic8ball/magic8ball.html
 
 </script>
 </body>
