entry checker challenge

--- a/054_ajax/03_entry-checker_challenge/02_solution/index.html
+++ b/054_ajax/03_entry-checker_challenge/02_solution/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="public/main.css">
 </head>
 <body>
 
@@ -15,6 +15,6 @@
 
 <h1>TEMPORARY</h1>
 
-<script src="main.js"></script>
+<script src="public/main.js"></script>
 </body>
 </html>
