entry checker challenge

--- a/054_ajax/03_entry-checker_challenge/01_instructions/index.html
+++ b/054_ajax/03_entry-checker_challenge/01_instructions/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-<form>
+<form method="post">
     <label for="entry">Enter Words</label>
-    <input id="entry" type="text">
+    <input id="entry" type="text" autocomplete="off">
     <input id="btn" type="submit">
 </form>
 
