--- a/054_ajax/03_entry-checker_challenge/02_solution/index.html
+++ b/054_ajax/03_entry-checker_challenge/02_solution/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 
-<form>
+<form method="post">
     <label for="entry">Enter Words</label>
-    <input id="entry" type="text">
+    <input id="entry" type="text" autocomplete="off">
     <input id="btn" type="submit">
 </form>
 
-<h1>TEMPORARY</h1>
+<h1></h1>
 
 <script src="public/main.js"></script>
 </body>
